# mkdocs-google-translate

./: README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
src/mkdocs_google_translate/: __init__.py  plugin.py
tests/: test_plugin.py
