[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-google-translate"
version = "1.1.1"
keywords = ["mkdocs", "markdown", "google", "translate"]
description = "A plugin to add relative links to Google Translate queries"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Sondre Grønås", email = "mail@sondregronas.com" }]
license = {text = "AGPL-3.0-or-later"}

dependencies = [
    "mkdocs>=1"
]

[project.urls]
homepage = "https://github.com/sondregronas/mkdocs-google-translate"
documentation = "https://github.com/sondregronas/mkdocs-google-translate"
repository = "https://github.com/sondregronas/mkdocs-google-translate"

[project.optional-dependencies]
tests = [
    'pytest'
]

[project.scripts]
my-google-translate = "mkdocs_google_translate.plugin:GoogleTranslatePlugin"
