[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-google-translate"
version = "1.2.0"
keywords = ["mkdocs", "markdown", "google", "translate"]
description = "A plugin to add relative links to Google Translate queries"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Sondre Grønås", email = "mail@sondregronas.com" }]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]

dependencies = [
    "mkdocs>=1",
]

[project.urls]
homepage = "https://github.com/sondregronas/mkdocs-google-translate"
documentation = "https://github.com/sondregronas/mkdocs-google-translate"
repository = "https://github.com/sondregronas/mkdocs-google-translate"
issues = "https://github.com/sondregronas/mkdocs-google-translate/issues"
funding = "https://github.com/sponsors/sondregronas"

[project.optional-dependencies]
tests = [
    'pytest'
]

[project.entry-points."mkdocs.plugins"]
google-translate = "mkdocs_google_translate.plugin:GoogleTranslatePlugin"
